--- a/src/pages/home/components/Projects/Projects.module.scss
+++ b/src/pages/home/components/Projects/Projects.module.scss
@@ -148,7 +148,7 @@
 
   &_img {
     width: 100%;
-    height: 100%;
+    height: 180px;
     margin-top: 5px;
     border: solid 1px variables.$gray-color;
 
@@ -158,6 +158,12 @@
       object-fit: cover;
     }
   }
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .card_back {
